accordian menu is working on mobile: fixed desktop nave on resize, links are opening on new page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -10,6 +10,10 @@ body,html {
   margin: 0px;
 }
 
+.body-no-scroll{
+  overflow: hidden;
+}
+
 .main-wrapper{
   position: relative;
   display: block;
@@ -29,6 +33,20 @@ body,html {
   z-index: 3;
 
 }
+
+#site-cover{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: block;
+  z-index: 2;
+  
+ 
+  background: #000;     
+  visibility: hidden;
+
+}
+
 
 .navigation #btn-home{
   position: relative;
@@ -71,7 +89,7 @@ body,html {
   text-transform: capitalize;
 }
 .navigation .nav-btn-holder .nav-btn:hover a{
-  color: #ec008c;
+  color: #000;
   background: #fff;
 } 
 /*
